using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis{ public const string HORIZONTAL = "Horizontal", VERTICAL = "Vertical";}

public class MouseAxis{ public const string MOUSE_X = "Mouse X", MOUSE_Y = "Mouse Y";}

public class Animation_Tags{
    public const string ZOOM_IN = "ZoomIn", ZOOM_OUT = "ZoomOut";
    public const string PARA_SHOOT = "Shoot", PARA_AIM = "Aim";
    public const string PARA_WALK = "Walk", PARA_RUN = "Run", PARA_ATTACK = "Attack", PARA_DEAD = "Dead";
}

public class Tags{
    public const string LOOK_ROOT = "Look Root", ZOOM_CAMERA = "FP Camera", CROSSHAIR = "Crosshair", ARROW_TAG = "Arrow";
    public const string PLAYER_TAG = "Player", ENEMY_TAG = "Enemy";
}

